--- a/1.IntroToR/R-intro.tex
+++ b/1.IntroToR/R-intro.tex
@@ -67,6 +67,13 @@
 \MakeOuterQuote{"}
 
 \usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=blue,
+    urlcolor=black
+}
 
 \title{A minimalist introduction to R}
 \date{\today}
